// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENTS - <Editor> render Editor 1`] = `
<span
  style={
    Object {
      "display": "inherit",
    }
  }
>
  <MonacoEditor
    className=""
    defaultValue=""
    editorDidMount={[Function]}
    editorWillMount={[Function]}
    height={400}
    language="text"
    name="123123123123"
    onChange={[MockFunction]}
    options={
      Object {
        "automaticLayout": true,
        "codeLens": false,
        "cursorBlinking": "blink",
        "fontFamily": "monospace",
        "fontLigatures": false,
        "fontSize": 12,
        "formatOnPaste": false,
        "lineHeight": 21,
        "lineNumbers": true,
        "minimap": Object {
          "enabled": false,
        },
        "roundedSelection": false,
        "scrollBeyondLastLine": false,
        "selectOnLineNumbers": false,
      }
    }
    theme="vs"
    value="hi"
    width="100%"
  />
</span>
`;

exports[`COMPONENTS - <Editor> render markdown Editor 1`] = `
<EditorWrapper>
  <MonacoEditor
    className=""
    defaultValue=""
    editorDidMount={[Function]}
    editorWillMount={[Function]}
    height={300}
    language="Markdown"
    name="123123123123"
    onChange={[MockFunction]}
    options={
      Object {
        "automaticLayout": true,
        "codeLens": false,
        "cursorBlinking": "blink",
        "fontFamily": "monospace",
        "fontLigatures": false,
        "fontSize": "12",
        "formatOnPaste": false,
        "lineHeight": "21",
        "lineNumbers": true,
        "minimap": Object {
          "enabled": false,
        },
        "roundedSelection": false,
        "scrollBeyondLastLine": false,
        "selectOnLineNumbers": false,
      }
    }
    theme="vs"
    value="# hi"
    width="50%"
  />
  <MarkdownComponent
    text="# hi"
    width="50%"
  />
</EditorWrapper>
`;
